added authorization and restriction pages

--- a/templates/main.html
+++ b/templates/main.html
@@ -5,9 +5,16 @@
     <title>myDjangoApp</title>
 </head>
 <body>
-    {% include 'navbar.html' %}
-    {% block content %}
+{% include 'navbar.html' %}
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
+{% block content %}
 
-    {% endblock %}
+{% endblock %}
 </body>
 </html>
