--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -1,19 +1,37 @@
 {% extends 'main.html' %}
 
 {% block content %}
-    <div>
-        <form method="POST" action="">
-            {% csrf_token %}
-            <label>Username:</label>
-            <label>
-                <input type="text" name="username" placeholder="Enter Username"/>
-            </label>
-            <label>Password:</label>
-            <label>
-                <input type="password" name="password" placeholder="Enter Password"/>
-            </label>
+    {% if page == 'login' %}
 
-            <input type="submit" value="Login"/>
-        </form>
-    </div>
+        <div>
+            <form method="POST" action="">
+                {% csrf_token %}
+                <label>Username:</label>
+                <label>
+                    <input type="text" name="username" placeholder="Enter Username"/>
+                </label>
+                <label>Password:</label>
+                <label>
+                    <input type="password" name="password" placeholder="Enter Password"/>
+                </label>
+
+                <input type="submit" value="Login"/>
+            </form>
+            <p>Haven't signed yet?</p>
+            <a href="{% url 'register' %}">Sign up</a>
+        </div>
+
+    {% else %}
+
+        <div>
+            <form method="POST" action="">
+                {% csrf_token %}
+
+                <input type="submit" value="Register"/>
+            </form>
+            <p>Already signed yet?</p>
+            <a href="{% url 'login' %}">Login</a>
+        </div>
+    {% endif %}
+
 {% endblock %}
