--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,7 +5,7 @@
     <style>
         .home-container {
             display: grid;
-            grid-template-columns: 1fr 3fr;
+            grid-template-columns: 1fr 3fr 1fr;
         }
     </style>
 
@@ -26,14 +26,14 @@
         </div>
 
         <div>
-        <h5>{{ room_count }} rooms available </h5>
+            <h5>{{ room_count }} rooms available </h5>
             <a href="{% url 'create-room' %}">Create Room</a>
             <div>
                 {% for room in rooms %}
                     <div>
                         {% if request.user == room.host %}
-                        <a href="{% url 'update-room' room.id %}">Edit</a>
-                        <a href="{% url 'delete-room' room.id %}">Delete</a>
+                            <a href="{% url 'update-room' room.id %}">Edit</a>
+                            <a href="{% url 'delete-room' room.id %}">Delete</a>
                         {% endif %}
                         <span>@{{ room.host.username }}</span>
                         <h5>{{ room.id }} -- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
@@ -44,6 +44,10 @@
             </div>
         </div>
 
+
+        <div>
+           {% include 'base/activity_component.html' %}
+        </div>
     </div>
 
 {% endblock %}
