--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -11,18 +11,7 @@
 
     <div class="home-container">
         <div>
-            <h3>Browse Topics</h3>
-            <hr>
-
-            <div>
-                <a href="{% url 'home' %}">ALL</a>
-            </div>
-
-            {% for topic in topics %}
-                <div>
-                    <a href="{% url 'home' %}?q={{ topic.name }}">{{ topic.name }}</a>
-                </div>
-            {% endfor %}
+            {% include 'base/topics_component.html' %}
         </div>
 
         <div>
@@ -46,7 +35,7 @@
 
 
         <div>
-           {% include 'base/activity_component.html' %}
+            {% include 'base/activity_component.html' %}
         </div>
     </div>
 
