--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -2,17 +2,26 @@
 
 
 {% block content %}
+
+    <style>
+        .profile-container {
+            display: grid;
+            grid-template-columns: 1fr 3fr 1fr;
+        }
+    </style>
     <h1> {{ user.username }}</h1>
-    <div>
+    <div class="profile-container">
         <div>
+            {% include 'base/topics_component.html' %}
 
         </div>
 
         <div>
-            {% include 'base/feed_component.html'%}
+            {% include 'base/feed_component.html' %}
         </div>
 
         <div>
+            {% include 'base/activity_component.html' %}
 
         </div>
     </div>
