--- a/templates/main.html
+++ b/templates/main.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 
-{#    <script src="script.js"></script>#}
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
 
