--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -10,7 +10,7 @@
                         <img src="{{ message.user.avatar.url }}"/>
                     </div>
                     <p>
-                        @{{ message.user }}
+                        {{ message.user }}
                         <span>{{ message.created|timesince }} ago</span>
                     </p>
                 </a>
